<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="164dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/customerName"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:gravity="center"
                android:labelFor="@id/customerNameInput"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:text="@string/customer_name"
                android:textColor="#263238"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/customerNameInput"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="#3103A9F4"
                android:ems="10"
                android:inputType="text"
                android:padding="5dp"
                android:textSize="12sp"
                tools:ignore="VisualLintTextFieldSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/customerID"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:gravity="center"
                android:labelFor="@id/customerIDInput"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:text="@string/customer_id"
                android:textColor="#263238"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/customerIDInput"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="#3103A9F4"
                android:ems="10"
                android:inputType="number"
                android:maxLength="3"
                android:padding="5dp"
                android:text="@string/_1"
                android:textSize="12sp"
                tools:ignore="VisualLintTextFieldSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/customerAddress"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:gravity="center"
                android:labelFor="@id/customerAddressInput"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:text="@string/customer_address"
                android:textColor="#263238"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/customerAddressInput"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="#3103A9F4"
                android:ems="10"
                android:inputType="text"
                android:padding="5dp"
                android:textSize="12sp"
                tools:ignore="VisualLintTextFieldSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>